Revision history for Perl extension Set::Infinite.

    added more tests: intersects/until/select
    optimized select()

0.5303
    removed Set::Infinite::Date
    removed /_eg directory
    simplified README

0.5302
    select( freq => $n ) is removed. 
    - breaks Date::Set 0.28 (Date::Set 0.29 is ok)
    select( by => [] ) default is changed to 'All'.
    - in order to have the same behaviour as when 'freq' was omitted.

0.5301
    refactored methods: min, max, first, last, until, iterate, offset
    removed obsolete method: compact
    renamed internal methods with _underline
    removed obsolete 'date' docs

0.53    2003-09-05
    fixes a test that fails under 5.00503
    does not export 'new'

0.52    2003-09-04
    change tests to run under (a broken) Perl 5.9.0
    - infinity string contains spaces

0.51    2003-09-02
    passes all tests under 5.00503.
    - changed ' $var=\@_ ' to ' $var=[@_] '
    compiles under Perl 5.00503.  Patch by Mathieu Arnold.

0.50
    count()
    fixed: size() does not try to add 'zero' to object.
    tests for count() and size()

0.49
    fixed: "first/last" of intersection between recurrences

0.48
    fixed: backtracking on a partially defined set.
    fixed: first of a union with an empty set.

0.47
    until allows start_set == end_set

0.46_01
    upload to perl-date-time CVS

0.46
    more docs

0.45
    last works, but not for union/quantize/select/offset
0.44_03
    last() can union/intersect/complement/offset
0.44_02
    last() can iterate/complement
0.44_01
    first(n) deprecated
    S::I::Basic::last() enabled

0.44
    CPAN release

0.43_01
    'iterate' generates 'first' code

0.43
    CPAN release
    implemented max() of 'iterate'

0.42_05
    implemented min() of 'iterate'
    fixed complex union with empty set

0.42_04
    finished removing 'our'

0.42_03 / 0.42_02
    (idem)

0.42_01
    more methods inherited from Set::Infinite::Basic

0.42_00
    Set::Infinite.pm refactored into Set::Infinite::Basic